--- a/public/auth_mail.html
+++ b/public/auth_mail.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>firebase 인증</title>
+    <title>Email Auth by Firebase</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="/css/materialize.min.css" media="screen,projection" />
@@ -19,7 +19,7 @@
 <body>
 
     <!-- 상단 네비게이션 -->
-    <nav class="indigo">
+    <!--<nav class="indigo">
         <div class="nav-wrapper">
             <div class="container">
                 <a href="/" class="breadcrumb">Firebase</a>
@@ -27,7 +27,7 @@
                 <a href="#" class="breadcrumb">mail auth</a>
             </div>
         </div>
-    </nav>
+    </nav>-->
 
     <!-- 내용 부분 -->
     <div class="container" id="CONTENTS">
@@ -50,15 +50,17 @@
                     </div>
                     <div class="input-field col s12">
                         <input id="INPUT_NAME" placeholder="닉네임을 입력하세요" type="text" class="validate">
-                        <label for="INPUT_NAME">displayName</label>
+                        <label for="INPUT_NAME">Nick Name</label>
                     </div>
                     <!-- TODO 닉네임 입력 폼 -->
                     <div class="input-field col s12">
                         <!-- 회원가입 버튼 -->
                         <!--<button id="BTN_SIGNUP" type="button" class="btn right blue"> 회 원 가 입 </button>-->
                         <!--<button id="creatAccountWithVerifyEmail" type="button" class="btn right blue">이메일 인증으로 가입하기</button>-->
-                        <button id="sendMailToResetPassword" type="button" class="btn right green">비밀번호 변경 메일 보내기</button>
-                        <button id="registerUserAndWaitEmailVerification" type="button" class="btn right blue">메일 인증 후 가입승인</button>
+                        <div class="btn-group col s12">
+                            <button id="sendMailToResetPassword" type="button" class="btn left green col s6">비밀번호 변경 메일 보내기</button>
+                            <button id="registerUserAndWaitEmailVerification" type="button" class="btn right blue col s6">메일 인증 후 가입승인</button>
+                        </div>
                     </div>
                 </div>
 
@@ -106,15 +108,14 @@
     <footer class="page-footer indigo">
         <div class="container">
             <div class="row center">
-                <a href="/auth.html" class="btn white indigo-text">돌아가기</a>
+                <!--<a href="/auth.html" class="btn white indigo-text">돌아가기</a>-->
             </div>
         </div>
         <div class="footer-copyright">
             <div class="container">
-                &copy; 2016 Copyright <a href="http://sbsoft.kr" target="_blank" class="white-text">SBJang</a> with
-                <a href="http://abcds.kr/" target="_blank" class="white-text">ABCD</a> (
-                <a href="https://www.facebook.com/groups/aboutCoding/" target="_blank" class="white-text">Facebook</a> )
-                <a class="white-text right" href="http://materializecss.com/" target="_blank">design by Materializecss</a>
+                &copy; 2017 Copyright <a href="http://sbsoft.kr" target="_blank" class="white-text">Jiwon 
+                [ <a href="https://twitter.com/BMman" target="_blank" class="white-text">Twitter</a> ] [ <a href="https://github.com/khaki4"
+                    target="_blank" class="white-text">GitHub</a> ]
             </div>
         </div>
     </footer>
