Jiwon :: Added SNS Icon

--- a/public/auth_mail.html
+++ b/public/auth_mail.html
@@ -114,9 +114,18 @@
         <div class="footer-copyright">
             <div class="container">
                 &copy; 2017 Copyright <a href="http://sbsoft.kr" target="_blank" class="white-text">Jiwon 
-                [ <a href="https://twitter.com/BMman" target="_blank" class="white-text">Twitter</a> ] [ <a href="https://github.com/khaki4"
-                    target="_blank" class="white-text">GitHub</a> ]
+                <div class="right">
+                    <a href="https://github.com/khaki4" target="_blank" class="white-text">
+                    <img src="/images/social-1_logo-facebook.svg" alt="">
+                </a>
+                <a href="https://twitter.com/BMman" target="_blank" class="white-text">
+                    <img src="/images/social-1_logo-github.svg" alt="">
+                </a>
+                <a href="https://linkedin.com/in/jiwon-jeoung-270a9065" target="_blank" class="white-text">
+                    <img src="/images/social-1_logo-linkedin.svg" alt="">
+                </a>
             </div>
+        </div>
         </div>
     </footer>
 
